--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     }
   ],
   "start_url": ".",
-  "homepage": ".",
+  "homepage": "https://gbrivate.github.io/star-match",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
